Prevent buttons from line-wrapping

--- a/src/ui/button.less
+++ b/src/ui/button.less
@@ -40,6 +40,7 @@ button, a.button
 	cursor: pointer;
 	transition: background-color 0.2s ease-out, color 0.2s ease-out;
 	user-select: none;
+	white-space: nowrap;
 
 	&.small
 	{
